<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_pose_filter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="marco.lapolla5@gmail.com">Marco Lapolla</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>Eigen3</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>ati_ft_mini45_interfaces</depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
