<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_pose_filter</name>
  <version>0.0.0</version>
  <description>Pose Filter for a TransformStamped</description>
  <maintainer email="marco.lapolla5@gmail.com">Marco Lapolla</maintainer>
  <license>BSD</license>

  <depend>ament_cmake</depend>

  <depend>Eigen3</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
